# ember-plus

./: .clangd  .gitignore  CHANGELOG.md  CMakeLists.txt
.github/workflows/: README.md  appimage.yml  ci.yml  release.yml
EmberViewer/: CMakeLists.txt  CODE_QUALITY_FIXES_APPLIED.md  FIXES_SUMMARY.md  LOGGING.md  README.md  run_tests.sh  validate_fixes.sh
EmberViewer/buildlogs/: OPTIMIZATION_ANALYSIS.md  analyze.ps1  latency_investigation.md  network_optimizations.md  subscription_batching_plan.md
EmberViewer/docs/: ARCHITECTURE.md  BUILDING.md  CONTRIBUTING.md  DEVICE_SNAPSHOT_FEATURE.md  ROADMAP.md  TODO.md  UPDATE_SYSTEM.md
EmberViewer/include/: BusySpinner.h  CacheManager.h  ConnectionDialog.h  ConnectionManager.h  ConnectionsTreeWidget.h  CrosspointActivityTracker.h  DeviceSnapshot.h  EmberConnection.h  EmberDataTypes.h  EmberProvider.h  EmberTreeWidget.h  EmulatorWindow.h  FunctionInvocationDialog.h  FunctionInvoker.h  GlowParser.h  GraphWidget.h  ImportExportDialog.h  LinuxUpdateManager.h  Logger.h  MacUpdateManager.h  MainWindow.h  MatrixManager.h  MatrixModel.h  MatrixWidget.h  MeterWidget.h  ParameterDelegate.h  PathColumnDelegate.h  S101Protocol.h  SliderWidget.h  SnapshotManager.h  StreamingDomReader.h  SubscriptionManager.h  TreeFetchService.h  TreeViewController.h  TriggerWidget.h  UpdateDialog.h  UpdateManager.h  VirtualizedHeaderView.h  VirtualizedMatrixWidget.h  VirtualizedSidebarView.h  (+2 more)
EmberViewer/installer/windows/: installer.nsi
EmberViewer/resources/: EmberViewer.desktop  app.rc  icons.qrc
EmberViewer/src/: BusySpinner.cpp  CacheManager.cpp  ConnectionDialog.cpp  ConnectionManager.cpp  ConnectionsTreeWidget.cpp  CrosspointActivityTracker.cpp  DeviceSnapshot.cpp  EmberConnection.cpp  EmberProvider.cpp  EmberTreeWidget.cpp  EmulatorWindow.cpp  FunctionInvocationDialog.cpp  FunctionInvoker.cpp  GlowParser.cpp  GraphWidget.cpp  ImportExportDialog.cpp  LinuxUpdateManager.cpp  Logger.cpp  MacUpdateManager.cpp  MainWindow.cpp  MatrixManager.cpp  MatrixModel.cpp  MatrixWidget.cpp  MeterWidget.cpp  ParameterDelegate.cpp  PathColumnDelegate.cpp  S101Protocol.cpp  SliderWidget.cpp  SnapshotManager.cpp  StreamingDomReader.cpp  SubscriptionManager.cpp  TreeFetchService.cpp  TreeViewController.cpp  TriggerWidget.cpp  UpdateDialog.cpp  UpdateManager.cpp  VirtualizedHeaderView.cpp  VirtualizedMatrixWidget.cpp  VirtualizedSidebarView.cpp  WindowsUpdateManager.cpp  (+1 more)
EmberViewer/tests/: CMakeLists.txt  README.md  test_constants.cpp  test_matrix_widget.cpp  test_parameter_delegate.cpp  test_path_parsing.cpp  test_s101_protocol.cpp  test_virtualized_matrix_widget.cpp
libember/: CMakeLists.txt
libember_slim/: CMakeLists.txt
libember_slim/Source/: bertypes.h
libformula/: CMakeLists.txt
libs101/: CMakeLists.txt
tinyember/TinyEmberPlus/: CMakeLists.txt
tinyember/TinyEmberPlusRouter/: CMakeLists.txt
